Bug 406105 - Bad numbering when start full screen on first image in directory.
Summary: Bad numbering when start full screen on first image in directory.
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.12.2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2019-04-01 08:16 UTC by Skála
Modified: 2024-12-07 16:33 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Incorrect part of top bar when on fullscreen (7.64 KB, image/png)
2019-04-01 08:16 UTC, Skála
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Skála 2019-04-01 08:16:46 UTC
Created attachment 119193 [details]
Incorrect part of top bar when on fullscreen

SUMMARY
Bad numbering when start full screen on first image in directory.

STEPS TO REPRODUCE
1. Open first image in directory by doubleclick. You will see in bottom of screen that it is image "1 of X".
2. Press fullscreen button and you will see in top left corner of the screen that it is image "0 of X"

OBSERVED RESULT
image number is "0 of X"

EXPECTED RESULT
image number is "1 of X"


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 29  (5.0.4-200.fc29.x86_64 #1 SMP Mon Mar 25 02:27:33 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux)
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.55.0
Qt Version: 5.11.3

ADDITIONAL INFORMATION
This happens only when opening image with doubleclick. When I open file using starting gwenview and than file->open then numbering is correct. Probably this is bug only in initializing fullscreen bar. When you have bad numbering and press next and previous the numbering is than correct.
Comment 1 Abijith 2019-04-02 04:04:53 UTC
Looks like a good patch material!
Comment 2 Abijith 2019-04-02 09:59:06 UTC
(In reply to Abijith from comment #1)
> Looks like a good patch material!

I'd like to work on whom do I contact?
Comment 3 Nate Graham 2019-04-02 15:22:34 UTC
You don't need to contact anyone, just work on it! :)

See https://community.kde.org/Get_Involved/development and https://community.kde.org/Infrastructure/Phabricator
Comment 6 Pedro 2024-12-07 16:33:24 UTC
Git commit de21528bff79cd8173b92eee040269fd480f487e by Pedro Hernandez.
Committed on 06/12/2024 at 05:01.
Pushed by felixernst into branch 'master'.

Fix incorrect numbering in full screen mode for the first image

The function `FullScreenContent::updateDocumentCountLabel()` is responsible
for updating the UI element that shows numbering in full screen mode.
However, it is only called once when Gwenview is launched to display an
image (e.g., from a file explorer or terminal). At that point, the function
pulls data from the model (an instance of `SortedDirModel`), but the model
isn't fully loaded, and it also requires an index to be selected before
providing accurate data. The correct timing for when the model can return
valid data happens in the slot `ContextManager::selectUrlToSelect()`,
specifically, when the selected index is not the root.

As a result, the data displayed is incorrect, showing `0 of 0` which are
default values.

This modification resolves the issue by connecting the signal
`ContextManager::selectionChanged()` to the
`FullScreenContent::updateDocumentCountLabel()` slot, which is emitted
when the model selection changes. To enable this, the slot needs to be
made public so it can be accessed from another class.

M  +1    -1    app/fullscreencontent.h
M  +1    -0    app/mainwindow.cpp

https://invent.kde.org/graphics/gwenview/-/commit/de21528bff79cd8173b92eee040269fd480f487e